Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,22 +22,50 @@
       <h3>
 <a id="despre-govithub" class="anchor" href="#despre-govithub" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Despre GovITHub</h3>
 
-<p>GovITHub este programul guvernamental care își propune să creeze comunitatea celor care cred într-un viitor digital pentru România prin transformarea serviciilor publice cu ajutorul tehnologiei. Mai multe informatii gasiti la noi pe <a href="http://ithub.gov.ro/despre-noi/">site</a>. Daca vrei sa ni te alaturi, <a href="http://ithub.gov.ro/inregistrare/">aplica aici</a> si da-ne un mesaj <a href="http://ithub.gov.ro/#contact">aici</a>.</p>
+<p>GovITHub este programul guvernamental care își propune să creeze comunitatea celor care cred într-un viitor digital pentru România prin transformarea serviciilor publice cu ajutorul tehnologiei. Mai multe informatii gasiti la noi pe <a href="http://ithub.gov.ro/despre-noi/">site</a> sau pe <a href="https://www.facebook.com/GovItHub">pagina de Facebook</a>. Daca vrei sa ni te alaturi, <a href="http://ithub.gov.ro/inregistrare/">aplica aici</a> si da-ne un mesaj <a href="http://ithub.gov.ro/#contact">aici</a>.</p>
 
 <h3>
 <a id="care-au-fost-rezultatele-primului-hackatonului-govit-hub" class="anchor" href="#care-au-fost-rezultatele-primului-hackatonului-govit-hub" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Care au fost rezultatele primului hackatonului GovIT Hub?</h3>
 
+<p>Așa cum știți, în weekend-ul 8-9 octombrie 2016 bursierii și 100 din voluntarii GovITHub s-au întâlnit la Palatul Victoria, la Hackatonul v0.0.1. Scopul a fost să ne cunoaștem, să vedem cum lucrăm împreună și să ne testăm împreună skill-urile pe 12 proiecte de lucru propuse pentru început.</p>
+
+<p><img src="https://github.com/gov-ithub/hackaton-v0.0.1/raw/master/hackaton.jpg" alt="Hackaton v0.0.1"></p>
+
+<p><a href="http://www.caleaeuropeana.ro/video-govithub-100-de-tineri-reuniti-la-guvern-isi-propun-sa-schimbe-romania-prin-solutii-it-ce-proiecte-au-prezentat-cabinetului-dacian-ciolos/">100 de tineri reuniți la Guvern își propun să schimbe România prin soluții IT</a></p>
+
 <p>La finalul celor 2 zile de hackaton și colaborare între bursierii și voluntarii GovITHub, toate cele 12 proiectele propuse de către echipa govITHub se aflau în stadiu de prototip funcțional. S-au ales tehnologiile in functie de cine era la masa. Toti cei care am fost la hackaton am fost constienți ca nu vom refolosi codul asta in productie. De aceea l-am si pus acum intr-un singur repo. </p>
+
+<h3>
+<a id="statusul-proiectelor-de-la-hackatonul-govit-hub" class="anchor" href="#statusul-proiectelor-de-la-hackatonul-govit-hub" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Statusul proiectelor de la Hackatonul GovIT Hub</h3>
 
 <p>Majoritatea proiectelor de la hackaton sunt acum in faza de analiza pentru dezvoltarea solutiei finale. Se formeaza echipele si se aloca responsabilitati. Imediat dupa, vor incepe sa apara pe github si repo-urile pentru ele. Speram ca cei care vor sa contribuie, testeze sau sa dea feedback vor continua sa o faca.</p>
 
 <p>Primul hackaton GovITHub a atras prezența și implicarea directă a peste 100 de specialiști în IT, design, UX, comunicare și marketing din cei peste 300 de voluntari oficiali selectați în program.</p>
 
-<p>Mai mult decât atât, desfășurarea de forțe de la hackaton-ul GovITHub a dus la generarea a <strong>sute de noi cereri de înscrieri</strong> în comunitatea GovITHub din partea celor care vor și ei să se implice activ.</p>
+<p>Mai mult decât atât, desfășurarea de forțe de la hackaton-ul GovITHub a dus la generarea a <strong>sute de noi cereri</strong> de înscrieri în comunitatea GovITHub din partea celor care vor și ei să se implice activ dar nu știau de acest program. Asta ne bucura cel mai mult si abia asteptam sa va cunoastem! </p>
 
-<p><em>Asta ne bucura cel mai mult!</em></p>
+<p>Va multumim ca sunteti cu noi!<br>
+Echipa GovITHub</p>
 
-<p>GovITHub</p>
+<h1>
+<a id="wegovit" class="anchor" href="#wegovit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WeGovIT</h1>
+
+<h3>
+<a id="ps-cum-a-arătat-primul-hackaton-govithub-în-cifre" class="anchor" href="#ps-cum-a-ar%C4%83tat-primul-hackaton-govithub-%C3%AEn-cifre" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PS: Cum a arătat primul hackaton GovITHub în cifre?</h3>
+
+<ul>
+<li>12 idei de proiecte pentru care s-au construit prototipuri viabile in doar 2 zile</li>
+<li>peste 100 de membri GovITHub care au petrecut un weekend ploios la Palatul Victoria, muncind</li>
+<li>Cel puțin 5 miniștri care au venit să ne vadă și să ne susțină</li>
+<li>Peste 300 de stickere mișto pe care nu am apucat să vi le dăm (inca)</li>
+<li>Vreo 175 de mențiuni în presă și peste 500 mențiuni pe social media</li>
+<li>3 tentative de hacking remote pe proiectele noastre, dintre care 1 reușită </li>
+<li>Cel putin 10 lectii invatate despre cum sa coordonezi 100 de oameni</li>
+<li>Aproximativ 15 “nu se poate-uri” demontate prin hackaton</li>
+<li>1 buletin ratacit si recuperat de SPP </li>
+<li>20 de necunoscuti care s-au tranformat intr-o super echipa in nici 7 zile</li>
+<li>Si 0 sanse ca ne vom opri aici! </li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gov-ithub/hackaton-v0.0.1">GovITHub Hackaton-v0.0.1</a> is maintained by <a href="https://github.com/gov-ithub">gov-ithub</a>.</span>
